Fixed the hovering to jump out on details page

--- a/src/components/common/cards/horizontal-card/HorizontalCard.css
+++ b/src/components/common/cards/horizontal-card/HorizontalCard.css
@@ -30,6 +30,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+	margin-right: 50px;
 }
 /** Header */
 .header {
@@ -59,6 +60,8 @@
 	font-size: inherit;
 	flex: 1;
 	color: gray;
+	float: right;
+	text-align: right;
 }
 
 /** Details */
